# proc_mapping

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  README.md  get_started.sh  package.xml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image-perception-develop.yml  docker-image-perception-feature.yml  docker-image-perception-fix.yml  docker-image-perception-master.yml
bag/: 2017-06-11-23-35-18.bag  2017-06-11-23-40-22.bag  bassin_0506_01  bassin_0506_03  bassin_0506_05  cvm_0515_04.bag  cvm_0619_01.bag  cvm_0626_01.bag  cvm_0626_03.bag  initialpositions.txt  st-charles_0605_01.bag
config/: proc_mapping_conf.yalm  proc_mapping_conf.yaml  proc_mapping_config.yaml  proc_trees.yaml  regions_of_interest.yaml
launch/: mapping.launch  proc_mapping.launch  proc_mapping_simulation.launch
msg/: GlobalMappingRequest.msg  GlobalMappingResponse.msg  KeyValueIdPose.msg  LocalMappingRequest.msg  LocalMappingResponse.msg  MappingRequest.msg  MappingResponse.msg  PingerLocation.msg  ProviderActivationRequest.msg
proc_mapping/: CoderTimeAPI.cpp  Kdtree.h  PointCloud2Types.cpp  Subscriber.h  buildInfo.mat  find.cpp  find.h  geometry_msgs_PointStruct.cpp  minOrMax.cpp  mlroscpp_msgconvert_utils.h  norm.cpp  package.xml  pcdownsample.cpp  pcdownsample.h  pcmerge.h  proc_mapping.cpp  proc_mapping.h  proc_mapping_initialize.h  proc_mapping_rtwutil.h  rosReadField.cpp  rosReadField.h  rosReadXYZ.cpp  rtGetInf.cpp  rtGetInf.h  rtwtypes.h  sensor_msgs_PointFieldStruct.cpp  stack1.h  std_msgs_HeaderStruct.cpp  svd.h  tic.cpp  voxelGridFilter.h
proc_mapping/config/: AUV8.yaml  LOCAL.yaml
proc_mapping/launch/: proc_mapping.launch
proc_mapping/proc_mapping/: Kdtree.cpp  PointCloudBundler.cpp  PointCloudBundler.h  Publisher.cpp  Rate.cpp  Subscriber.cpp  any1.h  eml_rand_mt19937ar_stateful.cpp  minOrMax.h  norm.h  pcdenoise.cpp  pcfitplane.cpp  pcmerge.cpp  planeModel.h  pointCloud.cpp  pointCloud.h  proc_mapping_data.cpp  proc_mapping_data.h  proc_mapping_internal_types.h  proc_mapping_rtwutil.cpp  proc_mapping_types.h  rand.cpp  ros_structmsg_conversion.cpp  ros_structmsg_conversion.h  sort.cpp  svd.cpp  voxelGridFilter.cpp  xrotg.cpp
proc_mapping/src/: Buoys.cpp  Buoys.h  CoderTimeAPI.cpp  CoderTimeAPI.h  Kdtree.cpp  Kdtree.h  PCANormal.hpp  PCANormalCore_api.hpp  ParameterTree.cpp  ParameterTree.h  PointCloud2Types.cpp  PointCloud2Types.h  PointCloudBundler.cpp  PointCloudBundler.h  PointCloudSegmentation.cpp  PointCloudSegmentation.h  Preprocessing.cpp  Preprocessing.h  Publisher.cpp  Publisher.h  Rate.cpp  Rate.h  RosNode.cpp  RosNode.h  SoundCloudBundler.cpp  SoundCloudBundler.h  SpecialMsgUtil.cpp  SpecialMsgUtil.h  Subscriber.cpp  Subscriber.h  Tables.cpp  Tables.h  affine3d.h  any1.cpp  any1.h  blockedSummation.cpp  blockedSummation.h  buildInfo.mat  combineVectorElements.cpp  combineVectorElements.h  (+207 more)
proc_mapping_config_server/: CMakeLists.txt  package.xml
proc_mapping_config_server/cfg/: ProcMappingServer.cfg
proc_mapping_config_server/launch/: proc_mapping_config_server.launch
proc_mapping_config_server/src/proc_mapping_config_server/: server.py
script/: SimulationProcMapping.py  mock_buoy.py  teleop_keyboard.py
scripts/: SimulationProcMapping.py  mock_markers.py  teleop_keyboard.py
src/: Kdtree.cpp  Kdtree.h  PCANormalCore.cpp  PointCloud2Types.h  PointCloudBundler.cpp  PointCloudBundler.h  Preprocessing.cpp  Publisher.cpp  Publisher.h  SpecialMsgUtil.h  Subscriber.cpp  affine3d.h  any1.h  blockedSummation.cpp  buildInfo.mat  combineVectorElements.cpp  combineVectorElements.h  eml_rand.cpp  eml_rand.h  eml_rand_mcg16807_stateful.h  eml_rand_shr3cong_stateful.h  geometry_msgs_PoseStruct.cpp  geometry_msgs_TwistStruct.cpp  kmeans.cpp  kmeans.h  log2.h  mlroscpp_msgconvert_utils.h  pcdenoise.h  pcdownsample.cpp  pcfitplane.cpp  pcfitplane.h  pcregistericp.cpp  pcsegdist.cpp  pcsegdist.h  pctransform.cpp  planeModel.h  pointCloud.cpp  pointCloud.h  pointCloudArray.h  proc_mapping.cpp  (+34 more)
src/proc_mapping/: AsyncImagePublisher.cc  AsyncImagePublisher.h  async_image_publisher.cc  async_image_publisher.h  config.h  debug.cc  debug.h  main.cc  object_mapper.cc  object_mapper.h  position.cc  position.h  proc_mapping_node.cc  proc_mapping_node.h  raw_map.cc  raw_map.h  region_of_interest.cc  region_of_interest.h  semantic_map.cc  semantic_map.h  types.h
src/proc_mapping/general/: AsyncImagePublisher.cc  AsyncImagePublisher.h  BaseObjectMapperInterface.h  MapObject.h  SubmarinePosition.cc  SubmarinePosition.h
src/proc_mapping/hydrophone/: HydrophoneMapper.cc  HydrophoneMapper.h
src/proc_mapping/interpreter/: data_interpreter.cc  data_interpreter.h  data_interpreter_inl.h  data_interpreter_interface.h  map_interpreter.cc  map_interpreter.h  object_registery.cc  object_registery.h  proc_mapping_types.h  raw_map.cc  raw_map.h  raw_map_interpreter.cc  raw_map_interpreter.h  tile_generator.cc  tile_generator.h  tile_interpreter.cc  tile_interpreter.h  vision_interpreter.cc  vision_interpreter.h  weighted_object_id.cc  weighted_object_id.h
src/proc_mapping/map/: coordinate_systems.cc  coordinate_systems.h  object_registery.cc  object_registery.h  raw_map.cc  raw_map.h  semantic_map.cc  semantic_map.h
src/proc_mapping/map_objects/: buoy.cc  buoy.h  fence.cc  fence.h  map_object.cc  map_object.h  wall.cc  wall.h
src/proc_mapping/objectives/: HydroObjective.cc  HydroObjective.h  Objective.cc  Objective.h
src/proc_mapping/pipeline/: parameter.h  proc_tree.cc  proc_tree.h  proc_unit.h
src/proc_mapping/proc_unit/: blob_detector.h  blur.h  buoys_detector.h  dilate.h  far_buoys_detector.h  fence_detector.h  find_contour.h  gaussian_blur.h  harris_corner.h  histogram.h  means_denoising.h  morphology.h  pattern_detection.h  proc_tree.cc  proc_tree.h  proc_tree_inl.h  proc_unit.h  threshold.h  wall_remover.h
src/proc_mapping/region_of_interest/: contour.cc  contour.h  wall.cc  (+7 more)
srv/: PingerLocationService.srv  ProviderActivation.srv
test/: CMakeLists.txt  SonarMapperTest.cc  raw_map_test.cc
test/TestUtils/: OdometrySimulator.h  SonarSimulator.h
(+14 files in other folders)
