<?xml version="1.0"?>
<package>
  <name>proc_mapping</name>
  <version>1.0.2</version>
  <description>
    The proc_mapping package is responsible for integrating all the information from the navigation, sonar
    and vision to dynamically create a map of its environment
  </description>


  <author>Thibaut Mattio</author>
  <author>Francis Massé</author>
  <author>Marc-Antoine Couture</author>

  <maintainer email="thibaut.mattio@gmail.com">Thibaut Mattio</maintainer>
  <maintainer email="francis.masse05@gmail.com">Francis Massé</maintainer>
  <maintainer email="coumarc9@outlook.com">Marc-Antoine Couture</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
    <build_depend>message_runtime</build_depend>
    <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>sonia_common</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>nav_msgs</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>sonia_common</run_depend>
  <run_depend>yaml-cpp</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>
